# gmeme

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: GResourcesCompile.cmake
data/: gmeme.gresource.xml
data/ui/: gmeme-edit-dialog.ui  gmeme-info-dialog.ui  gmeme-main.ui
src/: gmeme-app-data.c  gmeme-app-data.h  gmeme-gui.c  gmeme-gui.h  gmeme-image.c  gmeme-image.h  gmeme-info-dialog.c  gmeme-info-dialog.h  gmeme-paintable.c  gmeme-paintable.h  gmeme-utils.c  gmeme-utils.h  gui.c  gui.h  main.c
